--- a/projects1.html
+++ b/projects1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Sharky</title>
+    <title>Projects | Sharky</title>
     <script src = 'https://cdn.tailwindcss.com'></script>
 </head>
 <body class="bg-gray-950 text-white flex items-center justify-center h-screen font-sans">
