--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 hardware, software, and intelligence. -->
             </p>
             <div class="mt-8 flex gap-4">
-                <a href="projects.html" class="px-6 py-3 bg-cyan-500 text-black font-semibold rounded-lg shadow-lg hover:bg-cyan-400 transition">
+                <a href="projects1.html" class="px-6 py-3 bg-cyan-500 text-black font-semibold rounded-lg shadow-lg hover:bg-cyan-400 transition">
                     View My Work
                 </a>
                 <a href="contact.html" class="px-6 py-3 border border-cyan-500 text-cyan-400 font-semibold rounded-lg hover:bg-cyan-500 hover:text-black transition">
