--- a/mechatronics.html
+++ b/mechatronics.html
@@ -20,41 +20,44 @@
 
     <!-- Projects Grid -->
     <section class="px-6 py-12">
+        <button onclick="window.location.href='projects.html'" class="mb-8 px-4 py-2 bg-cyan-400 text-gray-900 rounded hover:bg-cyan-300 transition font-semibold">
+            ← Back to Projects
+        </button>
         <h2 class="text-4xl font-bold text-center text-cyan-400 mb-10">My Projects</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
             
             <!-- Project Card -->
             <!-- Repeat the card structure for each project -->
             <div class="bg-gray-900 rounded-lg shadow-lg p-6 hover:shadow-cyan-500/50 transition">
-                <img src="assets/images/vision_mouse.png" alt="vision-mouse" class="rounded mb-4">
+                <img src="assets/images/eye_mouse1.png" alt="vision-mouse" class="rounded mb-4">
                 <h3 class="text-xl font-semibold text-cyan-300 mb-2">Vision-Mouse</h3>
                 <p class="text-gray-400 mb-4">Control your mouse using eye movements and blinks with MediaPipe and PyAutoGUI.</p>
                 <a href="#" class="text-cyan-400 hover:underline">View Details</a>
             </div>
 
             <div class="bg-gray-900 rounded-lg shadow-lg p-6 hover:shadow-cyan-500/50 transition">
-                <img src="assets/images/vision_mouse.png" alt="advanced-vision-mouse" class="rounded mb-4">
+                <img src="assets/images/eye_mouse1.png" alt="advanced-vision-mouse" class="rounded mb-4">
                 <h3 class="text-xl font-semibold text-cyan-300 mb-2">Advanced Vision-Mouse</h3>
                 <p class="text-gray-400 mb-4">Vision-Mouse featuring automatic calibration for seamless setup—no manual adjustments needed.</p>
                 <a href="#" class="text-cyan-400 hover:underline">View Details</a>
             </div>
 
             <div class="bg-gray-900 rounded-lg shadow-lg p-6 hover:shadow-cyan-500/50 transition">
-                <img src="assets/images/vision_mouse.png" alt="weather-collector" class="rounded mb-4">
+                <img src="assets/images/eye_mouse1.png" alt="weather-collector" class="rounded mb-4">
                 <h3 class="text-xl font-semibold text-cyan-300 mb-2">Weather Collector</h3>
                 <p class="text-gray-400 mb-4">IoT weather station powered by CyberPi.</p>
                 <a href="#" class="text-cyan-400 hover:underline">View Details</a>
             </div>
 
             <div class="bg-gray-900 rounded-lg shadow-lg p-6 hover:shadow-cyan-500/50 transition">
-                <img src="assets/images/vision_mouse.png" alt="maze-runner" class="rounded mb-4">
+                <img src="assets/images/eye_mouse1.png" alt="maze-runner" class="rounded mb-4">
                 <h3 class="text-xl font-semibold text-cyan-300 mb-2">Maze Runner</h3>
                 <p class="text-gray-400 mb-4">Solves unknown mazes using Arduino Mega and ultrasonic sensors.</p>
                 <a href="#" class="text-cyan-400 hover:underline">View Details</a>
             </div>
 
             <div class="bg-gray-900 rounded-lg shadow-lg p-6 hover:shadow-cyan-500/50 transition">
-                <img src="assets/images/vision_mouse.png" alt="autonomous-bus" class="rounded mb-4">
+                <img src="assets/images/eye_mouse1.png" alt="autonomous-bus" class="rounded mb-4">
                 <h3 class="text-xl font-semibold text-cyan-300 mb-2">Autonomous Bus</h3>
                 <p class="text-gray-400 mb-4">Navigates routes autonomously, detects bus stops, follows traffic lights, and includes additional smart features.</p>
                 <a href="#" class="text-cyan-400 hover:underline">View Details</a>
@@ -63,34 +66,5 @@
         </div>
     </section>
 
-    <script id="projects-data" type="application/json">
-    [
-        {
-            "name": "Maze Runner",
-            "image": "assets/images/maze_runner.gif",
-            "desc": "Solves unknown mazes using Arduino Mega and ultrasonic sensors."
-        },
-        {
-            "name": "Autonomous Robot",
-            "image": "assets/images/autonomous_robot.gif",
-            "desc": "Navigates routes autonomously, detects bus stops, follows traffic lights, and more."
-        },
-        {
-            "name": "Weather Collector",
-            "image": "assets/images/weather_collector.gif",
-            "desc": "IoT weather station powered by CyberPi."
-        },
-        {
-            "name": "Vision Mouse",
-            "image": "assets/images/vision_mouse.png",
-            "desc": "Vision-Mouse with automatic calibration—no manual tuning required."
-        },
-        {
-            "name": "Advanced Vision Mouse",
-            "image": "assets/images/advanced_vision_mouse.gif",
-            "desc": "Enhanced Vision-Mouse with improved accuracy and advanced gesture controls."
-        }
-    ]
-    </script>
 </body>
 </html>
